<resources>
    <string name="app_name">Geography Quiz</string>
    <string name="title">geography quiz</string>
    <string name="welcome">Welcome to the Geography Quiz!</string>
    <string name="welcome_message">Below you\'ll find seven geography related questions. \nThere are true/false questions, multiple choice questions, text answers. \nAfter you are done, press the SUBMIT button at the end of the quiz to see your results. Only accurate answers count. \nYou can reset and restart the game by pressing the START button at the top. \n\nHave fun! </string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
    <string name="question4">Question 4</string>
    <string name="question5">Question 5</string>
    <string name="question6">Question 6</string>
    <string name="question7">Question 7</string>
    <string name="first_q">Is this statement true or false? \n\nThe capital of the United States of America is New York City.</string>
    <string name="second_q">Mark all the correct answers. \n\nThe USA has land borders with the following countries:</string>
    <string name="third_q">The largest city in India is </string>
    <string name="fourth_q">Mark the correct answer. \n\nWhich Asian country lays both on the northern and the southern hemisphere?</string>
    <string name="fifth_q">Is this statement true or false? \n\nBolivia lays on the equator.</string>
    <string name="sixth_q">Mark the correct answer. \n\nWhich country has larger land area?</string>
    <string name="seventh_q">Mark all the correct answers. \n\nThese countries bordering Sierra Leone: </string>
    <string name="q3_hint">Type your answer here.</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="your_answer">type your answer here</string>
    <string name="submit">Submit Answers</string>
    <string name="start">start</string>
    <string name="you_got">Your score is </string>
    <string name="out_of">out of 7. Press Start to restart the quiz.</string>
    <string name="q_2_a">Canada</string>
    <string name="q_2_b">Mexico</string>
    <string name="q_2_c">Cuba</string>
    <string name="q_2_d">Panama</string>
    <string name="q_7_a">Liberia</string>
    <string name="q_7_b">Burkina Faso</string>
    <string name="q_7_c">Guinea</string>
    <string name="q_7_d">Benin</string>
    <string name="q_4_a">India</string>
    <string name="q_4_b">Indonesia</string>
    <string name="q_4_c">Sri Lanka</string>
    <string name="q_4_d">Vietnam</string>
    <string name="q_6_a">Ukraine</string>
    <string name="q_6_b">Turkey</string>
    <string name="iconDescription">image of earth with a question mark over it</string>
</resources>
