<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.d.geographyquiz.MainActivity">

    <LinearLayout
        android:id="@+id/main_vertical"
        style="@style/paddings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Welcome to geography quiz!"
                android:textAlignment="center"
                android:textColor="@color/darkGrey"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/welcome_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/whatever" />


            <TextView
                android:id="@+id/explain_text"
                style="@style/questiontext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/welcome_message" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:padding="12dp"
                android:text="@string/start" />

            <View
                style="@style/viewLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_1"
                style="@style/question_title"
                android:text="@string/question1" />

            <TextView
                android:id="@+id/question_1"
                style="@style/questiontext"
                android:text="@string/first_q" />

            <RadioGroup
                android:id="@+id/answer_1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_1_true"
                    style="@style/radio_buttons"
                    android:checked="true"
                    android:text="@string/true_text" />

                <RadioButton
                    android:id="@+id/answer_1_false"
                    style="@style/radio_buttons"
                    android:text="@string/false_text" />

            </RadioGroup>

            <View
                style="@style/viewLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_2"
                style="@style/question_title"
                android:text="@string/question2" />

            <TextView
                android:id="@+id/question_2"
                style="@style/questiontext"
                android:text="@string/second_q" />

            <CheckBox
                android:id="@+id/answer_2_a"
                style="@style/checkbox"
                android:text="@string/q_2_a" />

            <CheckBox
                android:id="@+id/answer_2_b"
                style="@style/checkbox"
                android:text="@string/q_2_b" />

            <CheckBox
                android:id="@+id/answer_2_c"
                style="@style/checkbox"
                android:text="@string/q_2_c" />

            <CheckBox
                android:id="@+id/answer_2_d"
                style="@style/checkbox"
                android:text="@string/q_2_d" />

            <View
                style="@style/viewLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_3"
                style="@style/question_title"
                android:text="@string/question3" />

            <TextView
                android:id="@+id/question_3"
                style="@style/questiontext"
                android:text="@string/third_q" />

            <EditText
                android:id="@+id/answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/q3_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="12dp"
                android:textSize="14sp" />

            <View
                style="@style/viewLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_4"
                style="@style/question_title"
                android:text="@string/question4" />

            <TextView
                android:id="@+id/question_4"
                style="@style/questiontext"
                android:text="@string/fourth_q" />

            <RadioGroup
                android:id="@+id/answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_4_a"
                    style="@style/radio_buttons"
                    android:checked="true"
                    android:text="@string/q_4_a" />

                <RadioButton
                    android:id="@+id/answer_4_b"
                    style="@style/radio_buttons"
                    android:text="@string/q_4_b" />

                <RadioButton
                    android:id="@+id/answer_4_c"
                    style="@style/radio_buttons"
                    android:text="@string/q_4_c" />

                <RadioButton
                    android:id="@+id/answer_4_d"
                    style="@style/radio_buttons"
                    android:text="@string/q_4_d" />

            </RadioGroup>

            <View
                style="@style/viewLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_5"
                style="@style/question_title"
                android:text="@string/question5" />

            <TextView
                android:id="@+id/question_5"
                style="@style/questiontext"
                android:text="@string/fifth_q" />

            <RadioGroup
                android:id="@+id/answer_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_5_true"
                    style="@style/radio_buttons"
                    android:checked="true"
                    android:text="@string/true_text" />

                <RadioButton
                    android:id="@+id/answer_5_false"
                    style="@style/radio_buttons"
                    android:text="@string/false_text" />

            </RadioGroup>

            <View
                style="@style/viewLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_6"
                style="@style/question_title"
                android:text="@string/question6" />

            <TextView
                android:id="@+id/question_6"
                style="@style/questiontext"
                android:text="@string/sixth_q" />

            <RadioGroup
                android:id="@+id/answer_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_6_a"
                    style="@style/radio_buttons"
                    android:checked="true"
                    android:text="@string/q_6_a" />

                <RadioButton
                    android:id="@+id/answer_6_b"
                    style="@style/radio_buttons"
                    android:text="@string/q_6_b" />

            </RadioGroup>

            <View
                style="@style/viewLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_7"
                style="@style/question_title"
                android:text="@string/question7" />

            <TextView
                android:id="@+id/question_7"
                style="@style/questiontext"
                android:text="@string/seventh_q" />

            <CheckBox
                android:id="@+id/answer_7_a"
                style="@style/checkbox"
                android:text="@string/q_7_a" />

            <CheckBox
                android:id="@+id/answer_7_b"
                style="@style/checkbox"
                android:text="@string/q_7_b" />

            <CheckBox
                android:id="@+id/answer_7_c"
                style="@style/checkbox"
                android:text="@string/q_7_c" />

            <CheckBox
                android:id="@+id/answer_7_d"
                style="@style/checkbox"
                android:text="@string/q_7_d" />

            <View
                style="@style/viewLine" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Submit answers" />
    </LinearLayout>

</ScrollView>
